# CoRE2022-Controller

./: .gitignore  README.md  flake.nix  meson.build
nix/project/: devshells.nix  godot-ros.gdextension.in  packages.nix
project/: godot-ros.gdextension  icon.svg.import  main.tscn  main_bak.tscn  opentrack_pseye_uinput.ini  project.godot
project/assets/: robot.svg.import
project/fonts/: DSEG7Modern-BoldItalic.ttf.import
project/scripts/: ammo_indicator.gd  aps_control.gd  camera_controller.gd  camera_feed_background.gd  camera_manager.gd  camera_preset_manager.gd  custom_input.gd  fov_visual.gd  global_ros_node_executor.gd  grid.gd  input_manager.gd  joy.gd  joy_indicator.gd  minimap_controller.gd  node_manager.gd  opentrack.gd  ruler.gd  torch_collector_manager.gd
src/: laserscan_visualizer.cpp  laserscan_visualizer.h  lifecycle_manager.cpp  lifecycle_manager.h  register_types.cpp  register_types.h  robot_interface.cpp  robot_interface.h  ros_executor.cpp  ros_executor.h  ros_node.cpp  ros_node.h  test_node.cpp  test_node.h
